src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Branch</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Branch</value>
            </filterItems>
            <filterItems>
                <field>Account.Branch__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>Contact_Person__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End_Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_Sent_in_Campaign__c</fullName>
        <label>Num Sent in Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organiser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Organiser)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practitioner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Practitioner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Practitioner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Practitioner)</relationshipLabel>
        <relationshipName>Campaigns4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <description>Regarding conducting events type</description>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Lightning Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sling_Meet_Date__c</fullName>
        <label>Sling Meet Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sling_Meet_Description__c</fullName>
        <description>Regarding sling meet</description>
        <label>Sling Meet Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Speaker)</relationshipLabel>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Sponsor)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start_Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticket_Sale_Start_Date__c</fullName>
        <description>Regarding Event tickets sale date</description>
        <label>Ticket Sale Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Venue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Venue</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Venue</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (venue)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.EXP_REVENUE</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events_Campaign</fullName>
        <active>true</active>
        <description>Regarding on Events</description>
        <label>Events Campaign</label>
    </recordTypes>
    <validationRules>
        <fullName>Branch_Mandatory_for_Sling_Meet_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND( ISPICKVAL( Type , &apos;Sling Meet&apos;) , ISBLANK( Branch__c ) ) , true, false)</errorConditionFormula>
        <errorDisplayField>Branch__c</errorDisplayField>
        <errorMessage>Field Should be Mandatory for Sling Meet</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Practioner_Mandatory_for_Sling_Meet_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND( ISPICKVAL( Type , &apos;Sling Meet&apos;), ISBLANK( Practitioner__c ) ) , true, false)</errorConditionFormula>
        <errorDisplayField>Practitioner__c</errorDisplayField>
        <errorMessage>Field Should be Mandatory for Sling Meet</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Venue_Mandatory_for_Sling_Meet_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(ISPICKVAL( Type , &apos;Sling Meet&apos;), ISBLANK( Venue__c ) ) , true, false)</errorConditionFormula>
        <errorDisplayField>Venue__c</errorDisplayField>
        <errorMessage>Field Should be Mandatory for Sling Meet</errorMessage>
    </validationRules>
</CustomObject>